# fluctuoscopy

./: .gitignore  Cargo.toml  README.md  fscope.py  fscope_fitting.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml  python-package.yml
Data/KT010/: 1632_KT010_RTDw_R2p_Rsheet_HB110_gains1x_100x_100nA.txt  1632_KT010_RTDw_R2p_Rsheet_HB110_gains1x_100x_100nA_cleaned.txt
Data/KT010/GS/: 0055_KT010_GS_Rsheet_HB112_gain1k_50nA_10K.txt  1817_KT010_GS_Rsheet_HB110_gain1k_100nA.txt
Data/KT010/RTvsGate_110_extended/: 0205_KT010_RTdw_vs_Gate_Rsheet_Rsheet_HB110_50nA_gains_1k_1k_US_Vgate_70.00V.txt  0245_KT010_RTdw_vs_Gate_Rsheet_Rsheet_HB110_50nA_gains_1k_1k_US_Vgate_84.00V.txt  0445_KT010_RTdw_vs_Gate_Rsheet_Rsheet_HB110_50nA_gains_1k_1k_US_Vgate_126.00V.txt  0526_KT010_RTdw_vs_Gate_Rsheet_Rsheet_HB110_50nA_gains_1k_1k_US_Vgate_140.00V.txt  1723_KT010_RTdw_vs_Gate_Rsheet_Rsheet_HB110_50nA_gains_1k_1k_US_Vgate_-112.00V.txt  1843_KT010_RTdw_vs_Gate_Rsheet_Rsheet_HB110_50nA_gains_1k_1k_US_Vgate_-84.00V.txt  1923_KT010_RTdw_vs_Gate_Rsheet_Rsheet_HB110_50nA_gains_1k_1k_US_Vgate_-70.00V.txt  2124_KT010_RTdw_vs_Gate_Rsheet_Rsheet_HB110_50nA_gains_1k_1k_US_Vgate_-28.00V.txt  2324_KT010_RTdw_vs_Gate_Rsheet_Rsheet_HB110_50nA_gains_1k_1k_US_Vgate_14.00V.txt
Data/KT010/RTvsGate_112_extended/: 0000_1840_KT010_RTdw_vs_gate_Rsheet_V4p_HB112_50nA_gains_1k_1k_Vgate_-170.00V.txt  0000_2001_KT010_RTdw_vs_gate_Rsheet_V4p_HB112_50nA_gains_1k_1k_Vgate_-138.00V.txt  0000_2203_KT010_RTdw_vs_gate_Rsheet_V4p_HB112_50nA_gains_1k_1k_Vgate_-90.00V.txt  0206_KT010_RTdw_vs_gate_Rsheet_V4p_HB112_50nA_gains_1k_1k_Vgate_6.00V.txt  0247_KT010_RTdw_vs_gate_Rsheet_V4p_HB112_50nA_gains_1k_1k_Vgate_22.00V.txt  0327_KT010_RTdw_vs_gate_Rsheet_V4p_HB112_50nA_gains_1k_1k_Vgate_38.00V.txt  0448_KT010_RTdw_vs_gate_Rsheet_V4p_HB112_50nA_gains_1k_1k_Vgate_70.00V.txt  0529_KT010_RTdw_vs_gate_Rsheet_V4p_HB112_50nA_gains_1k_1k_Vgate_86.00V.txt  0609_KT010_RTdw_vs_gate_Rsheet_V4p_HB112_50nA_gains_1k_1k_Vgate_102.00V.txt  0731_KT010_RTdw_vs_gate_Rsheet_V4p_HB112_50nA_gains_1k_1k_Vgate_134.00V.txt
Data/KT027/MR_Rxy/: 0029_KT027_MRsheet_Rxy_vsBOP_Hb112dev1_1uA_gains_100x_100x__Temp_4.994K_Vgate_15.0V.txt  1139_KT027_MRsheet_Rxy_vsBOP_Hb112dev1_1uA_gains_100x_100x__Temp_4.994K_Vgate_-1.0V.txt  1510_KT027_MRsheet_Rxy_vsBOP_Hb112dev1_1uA_gains_100x_100x__Temp_4.994K_Vgate_4.5V.txt  1514_KT027_MRsheet_Rxy_vsBOP_Hb112dev1_1uA_gains_100x_100x__Temp_4.992K_Vgate_2.5V.txt  1819_KT027_MRsheet_Rxy_vsBOP_Hb112dev1_1uA_gains_100x_100x__Temp_5.001K_Vgate_6.0V.txt  2124_KT027_MRsheet_Rxy_vsBOP_Hb112dev1_1uA_gains_100x_100x__Temp_4.987K_Vgate_10.0V.txt
Data/KT027/RT_gate/: 1130_KT027_RTdwvsSGate_R2p_Rsheet_HB112dev1_100nA_gains_10x_100x_Vgate_-1.00V.txt  1217_KT027_RTdwvsSGate_R2p_Rsheet_HB112dev1_100nA_gains_10x_100x_Vgate_1.00V.txt  1241_KT027_RTdwvsSGate_R2p_Rsheet_HB112dev1_100nA_gains_10x_100x_Vgate_2.00V.txt  1305_KT027_RTdwvsSGate_R2p_Rsheet_HB112dev1_100nA_gains_10x_100x_Vgate_3.00V.txt  1329_KT027_RTdwvsSGate_R2p_Rsheet_HB112dev1_100nA_gains_10x_100x_Vgate_4.00V.txt  (+6 more)
FSCOPE/: AGM_const.h  AGM_core.h  AGM_data.h  AGM_sfunctions.cpp  AGM_sfunctions.h  fluctuoscope.cpp  paramfile.cpp  paramfile.h
examples/: fscope_fitting.ipynb
examples/fit results/: fit_data_KT010_112.pkl
fluctuoscopy/: __init__.py  fluctuosco.py  fscope.py  py_native_fscope.py
fluctuoscopy/tests/: test_fscopy.py
fscope/: fscope.py
src/: fluc.rs  lib.rs
tests/: test_fscopy.py
(+62 files in other folders)
