[package]
name = "fluctuoscopy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fluctuoscopy"
crate-type = ["cdylib"]

[dependencies]
polygamma = "0.1.0"
pyo3 = "0.23.3"
spfunc = "0.1.0"
statrs = "0.18.0"
num-complex = "0.4"
rayon = "1.8"
